<resources>
    <string name="user_name">Unknown User</string>
    <string name="galleryuse">Replace avatar</string>
    <string name="imageopen">Open</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="friends">Friends</string>
    <string name="beOnline">Online for everyone</string>
    <string name="checkboxSignup">I agree to the terms of use and privacy policy</string>
    <string name="serverAccessOK">✅</string>
    <string name="serverAccessNot">❌</string>
    <string name="deletethischat">Delete chat</string>
    <string name="selectAction">Select action</string>
    <string name="Message">Message</string>
    <string name="tag">Tag:</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="AlreadyRegistered">Already registered?</string>
    <string name="app_name" translatable="false">ReChat</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="UserName">User name</string>
    <string name="login">Login</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="title_user">User</string>
    <string name="title_chat">Chat</string>
    <string name="title_friends">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">username</string>
    <string name="delete">Delete</string>
    <string name="rechat" translatable="false">ReChat</string>
    <string name="users">Users</string>
    <string name="search">User search (tag)</string>
    <string name="people">People</string>
    <string name="share_to">Share To:</string>
    <string name="msg_share">My tag for adding to friends:</string>
    <string name="copy_tag">Copied!</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="remove_from_friends">Remove from friends</string>
    <string name="request">Request</string>
    <string name="status_connect">Connecting to the server:</string>
    <string name="icon_ok" translatable="false">✔</string>
    <string name="icon_cross" translatable="false">❌</string>
    <string name="nameOfChat">Dialog name</string>
    <string name="create_a_dialog">Create a dialog</string>
    <string name="searchDlg">Enter a name</string>
    <string name="data_visibility">Data visibility</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="social_status">Social status</string>
    <string name="country">Country</string>
    <string name="registration_date">Registration Date</string>
    <string name="about_me">About me</string>
    <string-array name="isVisibleData">
        <item>All</item>
        <item>Friends</item>
        <item>Nobody</item>
    </string-array>
    <string-array name="gender">
        <item>Unknown</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="editor">Editor</string>
    <string name="title">Title</string>
    <string name="log_out_chat">log out of the chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="add_a_user">Add a users</string>
    <string name="select_the_users_to_add">Select the users to add</string>
    <string name="loading_please_wait">Loading, please wait</string>
    <string name="log_out">Log Out</string>
    <string-array name="rangAccess">
        <item>Reader</item>
        <item>User</item>
        <item>Moderator</item>
        <item>Admin</item>
    </string-array>
</resources>