<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/mainInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/avatarDialog"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/user_photo"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/titleDialog"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:hint="@string/title"
                    android:textAlignment="center"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionSend"/>
                <Button
                    android:id="@+id/addUserInGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/add_a_user"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/logOutGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:text="@string/log_out_chat"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"/>
                <Button
                    android:visibility="gone"
                    android:id="@+id/deleteGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:text="@string/delete_chat"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/labelUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:textSize="22sp"
                android:layout_marginVertical="3dp"
                android:layout_marginStart="10dp"/>
            <LinearLayout
                android:id="@+id/loadingData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/listUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ListView
                    android:id="@+id/listViewInfoGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>