<?xml version="1.0" encoding="utf-8"?>
<Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/profile"
        android:textSize="30sp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/white"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:textSize="35sp"
        android:layout_marginHorizontal="1dp"
        android:textColor="@color/white"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <TextView
        android:id="@+id/chat"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/chat"
        android:textSize="30sp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/white"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:textSize="35sp"
        android:layout_marginHorizontal="1dp"
        android:textColor="@color/white"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <TextView
        android:id="@+id/friends"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/friends"
        android:textSize="30sp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/white"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
</LinearLayout>
</Toolbar>