<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userFragment"
    tools:context="ui.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundColor">
        <ImageView
            android:id="@+id/imageOfUser"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/white"
            android:onClick="changePhotoClick"
            android:scaleType="centerCrop"
            android:src="@drawable/user_profile_photo"
            tools:ignore="SpeakableTextPresentCheck"/>
        <TextView
            android:textColor="@color/colorPrimary"
            android:background="@drawable/round"
            android:backgroundTint="@color/white"
            android:id="@+id/nameOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="35sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>
        <LinearLayout
            android:background="@drawable/round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:textSize="22sp"
                android:layout_marginHorizontal="10dp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:id="@+id/tagOfUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:padding="5dp"/>
            <ImageButton
                android:id="@+id/copyTagBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/copy_icon_draw"
                android:scaleType="centerCrop"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:background="@drawable/round"
            android:backgroundTint="@color/white"
            android:textColor="@color/colorPrimary"
            android:id="@+id/switchBeOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beOnline"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="15dp"/>

    </LinearLayout>

</FrameLayout>