<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:background="@color/backgroundColor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:background="@drawable/round"
                android:id="@+id/userInFriend"
                style="@style/btnDlgSignLogin"
                android:text="@string/add_to_friends"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                app:backgroundTint="@color/accentColor"/>
            <ImageView
                android:id="@+id/imageOfUser"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/user_profile_photo"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:background="@drawable/round"
                android:backgroundTint="@color/white"
                android:id="@+id/nameOfUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="35sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
            <LinearLayout
                android:background="@drawable/round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:backgroundTint="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag"
                    android:textSize="22sp"
                    android:layout_marginHorizontal="10dp"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/tagOfUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="5dp"/>
                <ImageButton
                    android:id="@+id/copyTagBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/copy_icon_draw"
                    android:scaleType="centerCrop"
                    android:backgroundTint="@color/white"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/loadingData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/dataAboutUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:paddingVertical="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:id="@+id/genderUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:paddingVertical="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginHorizontal="10dp"
                        android:padding="5dp"
                        android:text="@string/birthday"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/birthdayUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="15dp"
                        android:longClickable="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:paddingVertical="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_status"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:id="@+id/socStatusUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="15dp"
                        android:maxLength="15"
                        android:maxLines="1"/>
                </RelativeLayout>
                <RelativeLayout
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:paddingVertical="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:id="@+id/countryUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="15dp"
                        android:maxLines="1"
                        android:maxLength="18"/>
                </RelativeLayout>
                <RelativeLayout
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:paddingVertical="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registration_date"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:id="@+id/dateRegUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="15dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:paddingVertical="5dp">
                    <TextView
                        android:id="@+id/aboutMeAnchor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_me"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:id="@+id/aboutmeUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/aboutMeAnchor"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="15dp"
                        android:textSize="22sp" />
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>